--- a/.github/workflows/eshoponweb-cicd.yml
+++ b/.github/workflows/eshoponweb-cicd.yml
@@ -5,10 +5,10 @@ on: [push, workflow_dispatch]
 
 #Environment variables https://docs.github.com/en/actions/learn-github-actions/environment-variables
 env:
-  RESOURCE-GROUP: rg-eshoponweb-az400-lab5
+  RESOURCE-GROUP: 'rg-eshoponweb-az400-lab5'
   LOCATION: westeurope
   TEMPLATE-FILE: infra/webapp.bicep
-  SUBSCRIPTION-ID: 67667939-58de-4577-8866-f6d14a469a8b
+  SUBSCRIPTION-ID: '67667939-58de-4577-8866-f6d14a469a8b'
   WEBAPP-NAME: eshoponweb-webapp-az400lab05
 
 
